[gd_scene load_steps=7 format=3 uid="uid://dycj7vbg18u0d"]

[ext_resource type="Script" uid="uid://3i74qk658a8p" path="res://scripts/nim_rect.gd" id="1_4c0mp"]
[ext_resource type="Script" uid="uid://ci78ho8fq8uvd" path="res://scripts/nim_game_ui.gd" id="1_5xtcv"]
[ext_resource type="FontFile" uid="uid://bw1c8mr1qxph6" path="res://imported_assets/fonts/NimbusMono-Bold.otf" id="1_byogf"]
[ext_resource type="Script" uid="uid://dy6dsy1p0r8fv" path="res://scripts/nim_grid.gd" id="1_d8c40"]
[ext_resource type="Texture2D" uid="uid://bfrk87n0d23y8" path="res://imported_assets/matchstick.png" id="1_ijtlw"]

[sub_resource type="Theme" id="Theme_76fu5"]
Label/fonts/font = ExtResource("1_byogf")

[node name="NimGameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_76fu5")
script = ExtResource("1_5xtcv")

[node name="BGRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NimGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 7
script = ExtResource("1_d8c40")

[node name="NimRect_00" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_01" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_02" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_03" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_03"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_04" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_05" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_06" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_07" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_08" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_09" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_09"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_10" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_10"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_11" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_11"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_12" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_13" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_14" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_15" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_15"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_16" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_16"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_17" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_17"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_18" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_18"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_19" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_19"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_20" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="NimRect_21" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_21"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_22" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_22"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_23" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_23"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_24" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_24"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_25" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_25"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_26" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_26"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="NimRect_27" type="ColorRect" parent="NimGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("1_4c0mp")

[node name="Sprite2D" type="Sprite2D" parent="NimGrid/NimRect_27"]
position = Vector2(31.5, 59)
texture = ExtResource("1_ijtlw")

[node name="TurnLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.0
offset_top = 47.0
offset_right = 145.0
offset_bottom = 70.0
text = "Turn: XXXXXX"

[node name="EndTurnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 987.0
offset_top = 121.0
offset_right = 1065.0
offset_bottom = 152.0
text = "End Turn"
